#255: fixed spacing issue (#256)

--- a/src/webui/designsystem/elements/row/Row.css
+++ b/src/webui/designsystem/elements/row/Row.css
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: row;
         min-width: 0;
+        height: 100%;
 
         & > div,
         & > h1,
