--- a/src/webui/layouts/sidebar/Sidebar.css
+++ b/src/webui/layouts/sidebar/Sidebar.css
@@ -3,11 +3,16 @@
     --header-height: 2.7em;
     --footer-height: 4.4em;
 
-    --left-width: 30vw;
-    --right-width: 70vw;
-
     --aside-width: 260px;
     --main-width: 640px;
+
+    --content-gap: 2em;
+
+    --calc-gap-half: calc(var(--content-gap) / 2);
+    --calc-content-offset: calc((var(--main-width) - var(--aside-width) + var(--calc-gap-half)) / 2);
+
+    --left-width: calc(50vw - var(--calc-content-offset));
+    --right-width: calc(100vw - var(--left-width));
 
     container-type: size;
 
@@ -29,6 +34,7 @@
     {
         display: flex;
         flex-direction: row;
+        gap: var(--content-gap);
         width: 100vw;
         height: 100vh;
         max-height: 100vh;
@@ -42,7 +48,6 @@
 
             aside
             {
-                display: flex;
                 flex-shrink: 0;
                 flex-grow: 0;
                 padding: 1em 0;
